--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
       </label>
     </div>
     <button id="submitBtn" class="btn btn-lg btn-primary btn-block">Ingrese</button>
+    <div class="alert" id="alert" role="alert">
+    </div>
     <p class="mt-5 mb-3 text-muted">&copy; 2020</p>
+
+    
 
   </div>
 
